# pyLabFEA

./: .gitignore  .travis.yml  MANIFEST.in  ML-Plasticity-SupplementaryMaterial.ipynb  README.md  THIRD_PARTY_LICENSES  environment.yml  environment_intelex.yml  index.ipynb  material.py  postBuild  pyproject.toml  setup.py
.github/workflows/: deploy.yml  test_routine.yml
doc/: examples.html  genindex.html  objects.inv  readme.html  search.html  searchindex.js
doc/_modules/: pyLabFEM.html
doc/_sources/: examples.rst.txt
doc/_static/: pyLabFEA_Introduction.html  pyLabFEA_ML-FlowRule.html  pyLabFEA_Plasticity.html  pyLabFEA_Tutorial_Composite.html
docs/: .buildinfo  .buildinfo.bak  Data_6D.html  Makefile  Train-Goss_Barlat-v1.html  bench_inhom.html  bench_material.html  bench_plast.html  examples.html  genindex.html  index.html  make.bat  modules.html  objects.inv  py-modindex.html  pyLabFEA.html  readme.html  search.html  searchindex.js  setup.html  test_calcyf.html  test_mat-response.html  test_shear.html
docs/_modules/: basic.html  data.html  index.html  material.html  model.html  pyLabData.html  pyLabFEM.html  pyLabMaterial.html
docs/_sources/: Data_6D.rst.txt  Train-Goss_Barlat-v1.rst.txt  bench_material.rst.txt  bench_plast.rst.txt  examples.rst.txt  index.rst.txt  pyLabFEA.rst.txt  readme.rst.txt  test_calcyf.rst.txt  test_mat-response.rst.txt  test_pool.rst.txt  test_shear.rst.txt  trainG_hyper.rst.txt
docs/_static/: documentation_options.js  pyLabFEA_Composites.html  pyLabFEA_Equiv-Stress.html  pyLabFEA_Homogenization.html  pyLabFEA_Introduction.html  pyLabFEA_ML-FlowRule-Hill.html  pyLabFEA_ML-FlowRule-Training.html  pyLabFEA_ML-FlowRule-Tresca.html  pyLabFEA_ML-FlowRule.html  pyLabFEA_Plasticity.html
docs/html/: .buildinfo  genindex.html  search.html  test_Barlat.html  test_pool.html  trainG_hyper.html
docs/source/: conf.py  examples.rst  index.rst  readme.rst
examples/: Train-Goss_Barlat-v1.py  Train-Goss_Barlat.py  Train-Hill.py  Train-J2.py  inclusion.py  train_goss_barlat.py  train_goss_barlat_hardening.py  train_hardening.py  train_hill.py  train_j2.py
examples/Active_Learning/: DATA_sig_iter_0.txt  DATA_sig_iter_200.txt  DATA_sunit_iter_0.txt  DATA_sunit_iter_200.txt  qbc_svc.py  variance.txt
examples/Texture/: train_texture.py
materials/: mat_ML-Goss-Barlat_C15_G25.pkl  mat_ML-Hill-p1_C15_G25.pkl  mat_ML-J2_C15_G25.pkl
models/: abq_ML-Goss-Barlat_C15_G25-svm.csv  abq_ML-Goss-Barlat_C15_G25-svm_meta.json  abq_ML-Hill-p1_C15_G25-svm.csv  abq_ML-J2_C15_G25-svm.csv  abq_ML-J2_C15_G25-svm_meta.json
notebooks/: ML-Plasticity-SupplementaryMaterial.ipynb  pyLabFEA_Composites.ipynb  pyLabFEA_Equiv-Stress.ipynb  pyLabFEA_Homogenization.ipynb  pyLabFEA_Introduction.ipynb  pyLabFEA_ML-FlowRule-Hill.ipynb  pyLabFEA_ML-FlowRule-Training.ipynb  pyLabFEA_ML-FlowRule-Tresca.ipynb  pyLabFEA_ML-FlowRule.ipynb  pyLabFEA_Plasticity.ipynb  pyLabFEA_Tutorial_Composite.ipynb
pylabfea/: __init__.py  basic.py  data.py  material.py  model.py  pyLabMaterial.py  pylabfem.py  pylabmaterial.py
source/: __init__.py  pyLabFEM.py  pyLabMaterial.py
tests/: test_1-model.py  test_basic.py  test_ml.py  test_model.py
(+56 files in other folders)
