[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylabfea"
version = '4.4.2'
description = "Python Laboratory for Finite Element Analysis"
authors = [
  { name = "Alexander Hartmaier", email = "alexander.hartmaier@rub.de" },
  { name = "Ronak Shoghi" },
  { name = "Jan Schmidt" }
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "scikit-learn",
  "ipympl"
]

[project.optional-dependencies]
dev = ["pytest", "black", "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.urls]
Homepage = "https://github.com/AHartmaier/pyLabFEA"

